[package]
name = "leptos_charts"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.0", features = ["nightly"] }
leptos-use = {git="https://github.com/Synphonyte/leptos-use.git"}#{ version = "0.9.0" }
num-traits = { version = "0.2.16" }
itertools = "0.11.0"
once_cell = "1.18.0"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "leptos/ssr",
  "leptos-use/ssr"
]
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
